[package]
name = "ironforge"
version = "0.1.1"
edition = "2024"
description = "A web framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/donbarrigon/ironforge"

[lib]
name = "ironforge"
path = "src/lib.rs"

[dependencies]
ironforge-macros = { version = "0.1.1", path = "../macros" }
ahash = { version = "0.8", features = ["serde"] }
rmp-serde = "1.3.1"

# ================ hyper ================
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# ================ tls ================
rcgen        = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# ================ log ================
chrono = { version = "0.4", features = ["serde"] }

# ================ error ================
backtrace = "0.3"

# ================ mongodb ================
serde = "1.0.188"
futures = "0.3.28"
serde_json = "1.0.149"
# ##tokio = {version = "1.32.0", features = ["full"]}
[dependencies.mongodb]
version = "3.6.0"
