[package]
name = "ironforge-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the Forge web framework"
license = "Apache-2.0"
repository = "https://github.com/donbarrigon/ironforge"

[lib]
proc-macro = true

[dependencies]
ironforge_macros = { path = "../macros" }

syn   = { version = "2", features = ["full"] }
quote = "1"
darling = "0.20"
proc-macro2 = "1"
